--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,7 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,4 +21,103 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+.form {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #2E2F42;
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  margin-top: 36px;
+  margin-bottom: 32px;
+}
+
+label {
+  display: flex;
+}
+
+input {
+  width: 272px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding-left: 16px;
+}
+
+button {
+  width: 95px;
+  height: 40px;
+  color: #FFFFFF;
+  background-color: #4E75FF;
+  border: #4E75FF;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  /* 150% */
+  letter-spacing: 0.64px;
+}
+
+.loader {
+  text-align: center;
+}
+
+.loader.is-hidden {
+  opacity: 0;
+  position: absolute;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+}
+
+.gallery-item {
+  list-style-type: none;
+  width: 360px;
+  max-height: 200px;
+  border: 1px solid #808080;
+}
+
+.gallery-image {
+  width: 360px;
+  height: 152px;
+  object-fit: cover;
+}
+
+.gallery-caption {
+  display: flex;
+  gap: 20px;
+
+  margin-top: 4px;
+  width: 360px;
+}
+
+.caption-title {
+  color: #2E2F42;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.3;
+  /* 133.333% */
+  letter-spacing: 0.48px;
+}
+
+.caption-item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.caption-value {
+  color: #2E2F42;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  /* 200% */
+  letter-spacing: 0.48px;
+
 }
