--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,7 +47,6 @@ input {
 }
 
 button {
-  width: 95px;
   height: 40px;
   color: #FFFFFF;
   background-color: #4E75FF;
@@ -58,6 +57,18 @@ button {
   line-height: 1.5;
   /* 150% */
   letter-spacing: 0.64px;
+  padding: 8px 16px;
+}
+
+.btn_load {
+  margin-top: 32px;
+  position: absolute;
+  left: 50%;
+}
+
+.btn_load.is-hidden {
+  opacity: 0;
+  position: absolute;
 }
 
 .loader {
